@@ -1,8 +1,8 @@
 # Query 001 (0.0 QPS) ID: 0xA20C29AF174CE545 at byte 1803 _______________
 #              total    %     min     max     avg     95%  stddev  median
 #     Count        3   50
-#      Time     36us   50    12us    12us    12us    12us       0    12us
-#      Lock        0    0       0       0       0       0       0       0
+# Exec time     36us   50    12us    12us    12us    12us       0    12us
+# Lock time        0    0       0       0       0       0       0       0
 # Rows sent        0    0       0       0       0       0       0       0
 # Rows exam        0    0       0       0       0       0       0       0
 #       DBs  foo
@@ -32,8 +32,8 @@ SELECT col FROM foo_tbl\G
 # Query 002 (0.3 QPS) ID: 0xD4CD74934382A184 at byte 1445 _______________
 #              total    %     min     max     avg     95%  stddev  median
 #     Count        3   50
-#      Time     36us   50    12us    12us    12us    12us       0    12us
-#      Lock        0    0       0       0       0       0       0       0
+# Exec time     36us   50    12us    12us    12us    12us       0    12us
+# Lock time        0    0       0       0       0       0       0       0
 # Rows sent        0    0       0       0       0       0       0       0
 # Rows exam        0    0       0       0       0       0       0       0
 #       DBs  bar
